--- a/css/style.css
+++ b/css/style.css
@@ -346,13 +346,9 @@ section, header {
 .production .product {
   border-radius: 3px;
   background-color: #fff;
+  box-shadow: 0px 3px 9px 0px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
   position: relative;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-.production .product:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .production .product:after {
 	content: "";
